Add notebooks with spark

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 notebooks/.ipynb_checkpoints/
 notebooks/unsupervised_learning/.ipynb_checkpoints/
 notebooks/eda/.ipynb_checkpoints/
+notebooks/using_spark/.ipynb_checkpoints/
